[package]
name = "envoy-exporter"
version = "0.0.4"
authors = ["Ben Alex <ben.alex@acegi.com.au>"]
repository = "https://github.com/benalexau/envoy-exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus exporter for Enphase Envoy Gateway"

[dependencies]
prometheus   = "0.13.1"
lazy_static  = "1.4.0"
actix-web    = "0.7"
curl         = "0.4.43"
serde        = "1.0.138"
serde_derive = "1.0.138"
serde_json   = "1.0.82"
toml         = "0.5.9"
simple_logger= "2.1.0"
log          = "0.4.17"
openssl = { version = "0.10.40", optional = true }

[features]
vendored-openssl = ["openssl/vendored"]
