[package]
name = "envoy-exporter"
version = "0.0.8"
authors = ["Ben Alex <ben.alex@acegi.com.au>"]
repository = "https://github.com/benalexau/envoy-exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus exporter for Enphase Envoy Gateway"
edition = "2021"

[dependencies]
prometheus   = "0.13.3"
lazy_static  = "1.4.0"
actix-web    = "0.7"
serde        = "1.0.152"
serde_derive = "1.0.152"
serde_json   = "1.0.91"
toml         = "0.5.11"
simple_logger= "2.3.0"
log          = "0.4.17"
openssl = { version = "0.10.45", optional = true }
anyhow = "1.0.68"
ureq = { version = "2.4.0", features = ["json"] }

[features]
vendored-openssl = ["openssl/vendored"]
