[package]
name = "envoy-exporter"
version = "0.1.0"
authors = ["Ben Alex <ben.alex@acegi.com.au>"]
repository = "https://github.com/benalexau/envoy-exporter"
license = "MIT"
readme = "README.md"
description = "Prometheus exporter for Enphase Envoy Gateway"
edition = "2021"

[dependencies]
prometheus   = "0.13.3"
lazy_static  = "1.4.0"
actix-web    = "0.7"
serde        = "1.0.189"
serde_derive = "1.0.189"
serde_json   = "1.0.107"
toml         = "0.8.2"
simple_logger= "4.2.0"
log          = "0.4.20"
anyhow = "1.0.75"
ureq = { version = "2.8.0", features = ["json"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
